--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <section id="staff-picks"></section>
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
-          <ul class="staff__lists">
+          <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
                 <h3 class="card__title">Introduction to Algorithms</h3>
@@ -214,9 +214,6 @@
 
         <section class="membership">
           <section id="be-a-member"></section>
-          <!-- --------------------------------------------------------------- -->
-          <!--         Don't uncomment until the final project stage           -->
-          <!-- --------------------------------------------------------------- -->
           <h2 class="membership__title">Becoming a library member is easy!</h2>
           <ul class="membership__steps">
             <li class="step">
@@ -304,7 +301,7 @@
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
-              alt="TT Logo"
+              alt="TripleTen Logo"
               class="footer__logo"
             />
           </div>
@@ -323,7 +320,7 @@
                   <img
                     src="./images/facebook_white.svg"
                     alt="Facebook Icon"
-                    class="footer__social-icons"
+                    class="footer__social-icon"
                   />Facebook</a
                 >
               </li>
@@ -333,7 +330,7 @@
                   <img
                     src="./images/instagram_white.svg"
                     alt="Instagram Icon"
-                    class="footer__social-icons"
+                    class="footer__social-icon"
                   />Instagram</a
                 >
               </li>
@@ -342,6 +339,5 @@
         </div>
         <p class="footer__copyright">&copy; 2023 Carolyn</p>
       </footer>
-    </div>
   </body>
 </html>
