--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@
         </section>
       </main>
 
-      <footer class="footer">
-        <footer id="contact-info"></footer>
+      <footer class="footer" id="contact-info">
         <div class="footer__columns">
           <div class="footer__column">
             <img
