--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
       </header>
 
       <main class="content">
-        <section class="events">
-          <section id="events"></section>
+        <section class="events" id="events">
           <div class="events__content">
             <h2 class="events__heading">Upcoming events:</h2>
             <h3 class="events__title">
@@ -137,8 +136,7 @@
           </div>
         </section>
 
-        <section class="staff">
-          <section id="staff-picks"></section>
+        <section class="staff" id="staff-picks">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
           <ul class="staff__cards">
@@ -212,8 +210,7 @@
           </ul>
         </section>
 
-        <section class="membership">
-          <section id="be-a-member"></section>
+        <section class="membership" id="be-a-member">
           <h2 class="membership__title">Becoming a library member is easy!</h2>
           <ul class="membership__steps">
             <li class="step">
@@ -269,8 +266,7 @@
           </ul>
         </section>
 
-        <section class="about">
-          <section id="about"></section>
+        <section class="about" id="about">
           <h2 class="about__title">About the library</h2>
           <div class="about__content">
             <p class="about__paragraph">
